# mu2edaq-resource-manager

./: .gitignore  CMakeLists.txt  README.md  example.env  requirements-dev.txt  requirements.txt
cli/: rm_cli.py
client/: demo_client.py
config/: auth.example.yaml  config-safe.yaml  example-resources.yaml  resources.yaml  state.json-2
include/: ResourceManagerClient.h
man/man1/: bootstrap.sh.1  demo_client.py.1  rm-cli.1  rm-demo.1  rm_cli.py.1
man/man8/: mu2edaq-resource-manager.8  start_server.sh.8  stop_server.sh.8
scripts/: bootstrap.sh  build_cpp.sh  load_env.sh  run_python_demo.sh  start_server.sh  stop_server.sh
server/: app.py  auth.py  discovery.py  models.py  mu2e-resource-manager.py  resource_manager.py
src/: ResourceManagerClient.cpp
src/cli/: main.cpp
src/demo/: demo_client.cpp
tests/: conftest.py  test_auth.py  test_discovery.py  test_ports.py  test_validation.py  test_who.py
tests/cpp/: test_client_lifecycle.cpp
web/: index.html
web/static/: app.js  style.css
